# my-vector-db

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPER.md  Dockerfile  README.md  app.py  cli.py  cool.py  demo.ipynb  docker-compose.yml  pyproject.toml  task.md
.github/workflows/: build-docker.yml  publish-python.yml
.specify/memory/: constitution.md
docs/: README.md  architecture-diagram.md
examples/: README.md  agno_example.py  batch_example.py  batch_operations.py  client.ipynb  demo.ipynb  error_handling.py  meta_data_filtering.py  sdk_example.py  search_basic.py  search_filters_combined.py  search_filters_custom.py  search_filters_declarative.py  utils.py  verdict.py
scripts/: generate_test_data.py  load_data.py
specs/001-ivfflat-index/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ivfflat-index/checklists/: requirements.md
specs/001-ivfflat-index/contracts/: api-contract.md
src/my_vector_db/: __init__.py  cli.py  main.py  serialization.py  storage.py
src/my_vector_db/api/: routes.py  schemas.py
src/my_vector_db/db/: __init__.py  my_vector_db.py
src/my_vector_db/domain/: __init__.py  models.py
src/my_vector_db/filters/: evaluator.py
src/my_vector_db/indexes/: base.py  flat.py  hnsw.py  ivf.py
src/my_vector_db/mcp/: server.py
src/my_vector_db/sdk/: __init__.py  (+3 more)
tests/: conftest.py  test_api.py  test_batch_operations.py  test_complex_operations.py  test_filter_evaluator.py  test_flat_index.py  test_ivf_index.py  test_sdk.py  test_search_service.py  test_services.py  test_thread_safety.py
(+3 files in other folders)
