[project]
name = "my-vector-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam Shedivy", email = "ajshedivyaj@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.1",
    "anthropic>=0.71.0",
    "cohere>=5.19.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]
